--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-auth = "^2.29.0"
 google-auth-oauthlib = "^1.2.0"
 Flask-SQLAlchemy = "^3.1.1"
 Werkzeug = "^3.0.0"
+flask-login = "^0.6.3"
 
 
 [build-system]
